respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/User.object
<CustomObject>
    <fields>
        <fullName>AW_Margen_Operativo__c</fullName>
        <label>AW- Margen Operativo</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_Marg_Op__c</fullName>
        <label>A - Margen Operativo</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_Paq_Margen_Operativo__c</fullName>
        <label>A Paq - Margen Operativo</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Break_Even__c</fullName>
        <label>Break Even</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cobranza_Email_2__c</fullName>
        <label>Cobranza Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cobranza_Email_3__c</fullName>
        <label>Cobranza Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cobranza_Email__c</fullName>
        <label>Cobranza Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contado_Mgm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clientes Contado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desbloq_SP_SL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desbloq Service Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <relationshipName>Direction</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Director_Email__c</fullName>
        <label>Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_Acuse__c</fullName>
        <label>Ejecutivo Acuse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_User_Manager__c</fullName>
        <formula>Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email User Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FI_LTL_Margen_Operativo__c</fullName>
        <label>FI LTL - Margen Operativo</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FI_Marg_Op__c</fullName>
        <label>FI - Margen Operativo</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FN_Marg_Op__c</fullName>
        <label>FN - Margen Operativo</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IsManager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsManager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M_LCL_Margen_Operativo__c</fullName>
        <label>M LCL - Margen Operativo</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_Marg_Op__c</fullName>
        <label>M - Margen Operativo</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margen_Operativo__c</fullName>
        <label>Margen Operativo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MetaAereo__c</fullName>
        <label>MetaAereo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_Almacenaje__c</fullName>
        <label>Meta Almacenaje</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_Citas__c</fullName>
        <label>Meta Citas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meta_Colocacion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Meta Colocacion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meta_Consolidado__c</fullName>
        <label>Meta Consolidado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_Contactados__c</fullName>
        <label>Meta Contactados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meta_Cotizado__c</fullName>
        <label>Meta Cotizado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_Fletes__c</fullName>
        <label>Meta Fletes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_Martiimo_Int__c</fullName>
        <label>Meta Martiimo Int</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_Paqueteria__c</fullName>
        <label>Meta Paqueteria</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_Puertos__c</fullName>
        <label>Meta Puertos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_Seguros__c</fullName>
        <label>Meta Seguros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_Terr_Int__c</fullName>
        <label>Meta Terr Int</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Shipment_Service_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Shipment Service Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P2G_spot__c</fullName>
        <description>se creo campo para la regla de validacion en la SL para aprobar una IEQ</description>
        <label>Spot</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PQ_Margen_Operativo__c</fullName>
        <label>PQ - Margen Operativo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTO_Margen_Operativo__c</fullName>
        <label>PTO- Margen Operativo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pak2Go_ID__c</fullName>
        <label>Pak2Go ID</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plaza__c</fullName>
        <label>Plaza</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrcCode__c</fullName>
        <description>Codigo de usuario donde radica</description>
        <label>PrcCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Margen_Operativo__c</fullName>
        <label>R- Margen Operativo</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SalesEmployer__c</fullName>
        <label>SlpCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Target__c</fullName>
        <label>Sales Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seller_Type__c</fullName>
        <label>Figura</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Key Account</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                    <label>Asesor</label>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Rate_User_Type__c</fullName>
        <label>Service Rate User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BUY</fullName>
                </value>
                <value>
                    <fullName>SELL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Servicio__c</fullName>
        <label>Servicio</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fletes Nacionales</fullName>
                </value>
                <value>
                    <fullName>Fletes Internacionales</fullName>
                </value>
                <value>
                    <fullName>Aereo</fullName>
                </value>
                <value>
                    <fullName>Maritimo</fullName>
                </value>
                <value>
                    <fullName>Paqueteria</fullName>
                </value>
                <value>
                    <fullName>Tarimas</fullName>
                </value>
                <value>
                    <fullName>Almacenajes</fullName>
                </value>
                <value>
                    <fullName>Spot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_of_Load_2__c</fullName>
        <label>State of Load 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_of_Load_3__c</fullName>
        <label>State of Load 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_of_Load_4__c</fullName>
        <label>State of Load 4</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_of_Load__c</fullName>
        <label>State of Load</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Margen_Operativo__c</fullName>
        <label>T- Margen Operativo</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P2G</fullName>
                </value>
                <value>
                    <fullName>WCA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_License__c</fullName>
        <label>Type License</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Users__c</fullName>
        <label>Users</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Margen_Operativo__c</fullName>
        <label>W- Margen Operativo</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Workplace__c</fullName>
        <label>Workplace</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zona_Comercial__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Noreste</fullName>
                </value>
                <value>
                    <fullName>Centro</fullName>
                </value>
                <value>
                    <fullName>Occidente</fullName>
                </value>
                <value>
                    <fullName>Sur</fullName>
                </value>
                <value>
                    <fullName>Noroeste</fullName>
                </value>
                <value>
                    <fullName>Sin Region</fullName>
                </value>
                <value>
                    <fullName>Cuentas Claves</fullName>
                </value>
                <value>
                    <fullName>Impak</fullName>
                </value>
                <value>
                    <fullName>Proceso Central</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Corporativo</fullName>
                </value>
                <value>
                    <fullName>Globales</fullName>
                </value>
                <value>
                    <fullName>CCN</fullName>
                </value>
                <value>
                    <fullName>CCO</fullName>
                </value>
                <value>
                    <fullName>CCC</fullName>
                </value>
                <value>
                    <fullName>Norte PQ</fullName>
                </value>
                <value>
                    <fullName>Norte FN</fullName>
                </value>
                <value>
                    <fullName>Internacional</fullName>
                </value>
                <value>
                    <fullName>Centro FN</fullName>
                </value>
                <value>
                    <fullName>Centro PQ</fullName>
                </value>
                <value>
                    <fullName>CC Centro</fullName>
                </value>
                <value>
                    <fullName>CC Noreste</fullName>
                </value>
                <value>
                    <fullName>CC Occidente</fullName>
                </value>
                <value>
                    <fullName>Centro PTC</fullName>
                </value>
                <value>
                    <fullName>Norte PTC</fullName>
                </value>
                <value>
                    <fullName>Admin PTC</fullName>
                </value>
                <value>
                    <fullName>Digital PTC</fullName>
                </value>
                <value>
                    <fullName>KAM PTC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zona__c</fullName>
        <label>Zona</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zona</fullName>
                </value>
                <value>
                    <fullName>PAC-SUR</fullName>
                </value>
                <value>
                    <fullName>Noroeste</fullName>
                </value>
                <value>
                    <fullName>GDL</fullName>
                </value>
                <value>
                    <fullName>Centro-Norte</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zone_of_Load__c</fullName>
        <label>Zone of Load</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Norte</fullName>
                </value>
                <value>
                    <fullName>Centro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>compras__c</fullName>
        <label>COMPRAS</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>dfsle__CanManageAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can Manage DocuSign Account</description>
        <label>Can Manage DocuSign Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__Provisioned__c</fullName>
        <description>Date when the user was added to the account</description>
        <inlineHelpText>Date provisioned</inlineHelpText>
        <label>DocuSign Provisioned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dfsle__Status__c</fullName>
        <label>Docusign Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dfsle__Username__c</fullName>
        <description>DocuSign Username</description>
        <label>DocuSign Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>SalesEmployer__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Zona_Comercial__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Admin</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Usuarios administradores</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Workplace__c</columns>
        <columns>SalesEmployer__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Admin</value>
        </filters>
        <label>COMERCIAL TOR</label>
    </listViews>
    <listViews>
        <fullName>COMERCIAL_CE</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Workplace__c</columns>
        <columns>Zona_Comercial__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workplace__c</field>
            <operation>equals</operation>
            <value>MEX</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>COMERCIAL</value>
        </filters>
        <label>COMERCIAL CE</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COMERCIAL_MTY</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Workplace__c</columns>
        <columns>Zona_Comercial__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workplace__c</field>
            <operation>equals</operation>
            <value>MTY,CCN</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>COMERCIAL</value>
        </filters>
        <label>COMERCIAL MTY</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COMERCIAL_OCC</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Workplace__c</columns>
        <columns>Zona_Comercial__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workplace__c</field>
            <operation>equals</operation>
            <value>GDL,LEO,QUE,SLP</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>COMERCIAL</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>COMERCIAL OCC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MONITOREO</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Users__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Workplace__c</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Monitoreo</value>
        </filters>
        <label>MONITOREO</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>OPERACIONES_MTY</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Workplace__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workplace__c</field>
            <operation>equals</operation>
            <value>MTY</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>OPERATIONS,PLANNER</value>
        </filters>
        <label>OPERACIONES MTY</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Servicio_Cliente_Terrestre</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>SAC</value>
        </filters>
        <label>SCFN</label>
    </listViews>
    <listViews>
        <fullName>Toluca</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workplace__c</field>
            <operation>equals</operation>
            <value>TOL</value>
        </filters>
        <label>Toluca</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>US001_No_cambiar_los_datos</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  NOT( $Profile.Id = &quot;00e4T000000zD9C&quot; ),
  NOT( ISCHANGED( Fax ) ),
  NOT( $User.Username = &quot;catherine.calderon@pak2go.com&quot; )
)</errorConditionFormula>
        <errorMessage>US001 - Privilegios insufucientes para editar el registro.</errorMessage>
    </validationRules>
</CustomObject>